Fix overflow issues

--- a/app/stylesheet/scss/tour_views.scss
+++ b/app/stylesheet/scss/tour_views.scss
@@ -5,7 +5,7 @@ body {
 }
 
 #map {
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -32,13 +32,21 @@ body {
   }
 }
 
+.fullscreen {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .modal-list {
   position: absolute;
   top: 2em;
   left: 50%;
   background: $formBGcolor;
   overflow: auto;
-  max-width: 30%;
+  width: 90%;
+  max-width: 20em;
   max-height: 90%;
   padding: 20px;
   border-radius: 3px;
@@ -63,7 +71,7 @@ body {
 
 .modal-list-hide {
   transform: translate3d(-50%, -110%, 0);
-
+}
 .home-button {
   position: fixed;
   bottom: 20px;
@@ -112,7 +120,7 @@ body {
   input[type='text'] {
     font-size: 2em;
     min-width: 80%;
-    max-width: 100%;
+    max-width: 80%;
   }
   button {
     background: coral;
